syntax = "proto3";

option csharp_namespace = "Ingredients.Protos";

package ingredients;

service IngredientsService {
  rpc GetToppings(GetToppingsRequest) returns (GetToppingsResponse);
  rpc DecrementToppings(DecrementToppingsRequest) returns (DecrementToppingsResponse);
  rpc GetCrusts(GetCrustsRequest) returns (GetCrustsResponse);
  rpc DecrementCrusts(DecrementCrustsRequest) returns (DecrementCrustsResponse);
}

message GetToppingsRequest { }

message GetToppingsResponse {
  repeated Topping toppings = 1;
}

message Topping {
  string id = 1;
  string name = 2;
  double price = 3;
}

message GetCrustsRequest { }

message GetCrustsResponse {
  repeated Crust crusts = 1;
}

message Crust {
  string id = 1;
  string name = 2;
  int32 size = 3;
  double price = 4;
}

message DecrementToppingsRequest {
  repeated string topping_ids = 1;
}

message DecrementToppingsResponse {}

message DecrementCrustsRequest {
  string crust_id = 1;
}

message DecrementCrustsResponse {}
