syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Orders.Protos";

package orders;

service OrderService {
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
  rpc Subscribe(SubscribeRequest) returns (stream OrderNotification);
}

message PlaceOrderRequest {
  string crust_id = 1;
  repeated string toppings_ids = 2;
}

message PlaceOrderResponse {
  google.protobuf.Timestamp expected_time = 1;
}

message SubscribeRequest {}

message OrderNotification {
  string crust_id = 1;
  repeated string topping_ids = 2;
  google.protobuf.Timestamp expected_time = 3;
}